--- a/index.html
+++ b/index.html
@@ -12,135 +12,159 @@
 
   <header>
     <div class="ramka">
-      <div id="logo">
-        <a href="./index.html">
-          <img alt="logo" src="images/logo.svg" id="svg">
-        </a>
-      </div>
-      <div class="nav1">
-        <nav>
-          <ol>
-            <li class="navi">
-              <a class="outlink" href="https://ya.ru">
-                💬 TG
-              </a>
-            </li>
-            <li class="navi">
-              <a class="outlink" href="https://ya.ru">
-                😊 VK
-              </a>
-            </li>
-            <li class="navi">
-              <a class="outlink" href="https://ya.ru">
-                📺 YouTube
-              </a>
-            </li>
-          </ol>
-        </nav>
-      </div>
+      <a href="index.html">
+        <img alt="logo" src="images/logo.svg" id="svg">
+      </a>
+      <nav>
+        <ol>
+          <li class="navi">
+            <a class="outlink" href="#">
+              💬 TG
+            </a>
+          </li>
+          <li class="navi">
+            <a class="outlink" href="#">
+              😊 VK
+            </a>
+          </li>
+          <li class="navi">
+            <a class="outlink" href="#">
+              📺 YouTube
+            </a>
+          </li>
+        </ol>
+      </nav>
     </div>
   </header>
 
   <div class="back">
-    <div class="ramka">
+    <div class="ramka1">
       <h2 clas="tab">Коллекция. {октябрь:2023}</h2>
-    </div>
-  </div>
 
-  <section class="ramka-cont">
-    <div class="content">
-      <div class="container">
-        <img alt="Nike Air Max Plus" src="./images/1.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">Nike Air Max Plus</h3>
-          <p class="container__text">Patta FC Barcelona Culers del Món</p>
+      <section class="ramka-cont">
+        <div class="content">
+
+          <div class="container">
+            <a href="C-ms574.html" class="card">
+              <img alt="New Balance C-ms574" src="./images/6.png" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">New Balance 574 YURT</h3>
+                <p class="container__text">Salehe Bembury Shark Skinw</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="Dunk_Low_SP.html" class="card">
+              <img alt="Nike Dunk Low SP"
+                src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/2.png"
+                class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">Nike Dunk Low SP</h3>
+                <p class="container__text">Nike Dunk Low Orange Blaze Syracuse</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="Chuck_70.html" class="card">
+              <img alt="Converse Chuck Taylor All Star 70 Hi" src="./images/4.jpg" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">Converse Chuck 70 High</h3>
+                <p class="container__text">Comme des Garcons PLAY Black</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="adidas Yeezy Foam RNR"
+                src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/3.png"
+                class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">adidas Yeezy Foam RNR</h3>
+                <p class="container__text">Desert Sand</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="Nike Air Max Plus" src="./images/1.jpg" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">Nike Air Max Plus</h3>
+                <p class="container__text">Patta FC Barcelona Culers del Món</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="Jordan 1 Retro High OG SP" src="./images/2.jpg" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">Jordan 1 Retro High OG SP</h3>
+                <p class="container__text">Union LA Bephies Beauty Supply Summer of ‘96</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="Jadidas Campus 00s" src="./images/3.jpg" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">adidas Campus 00s</h3>
+                <p class="container__text">Core Black</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="UGG Classic Ultra Mini Boot" src="./images/5.jpg" class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">UGG Classic Ultra Mini Boot</h3>
+                <p class="container__text">Chestnut (Women's)</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="container">
+            <a href="#" class="card">
+              <img alt="Jordan 1 Retro Low Golf"
+                src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/1.png"
+                class="container__image" />
+              <div class="container__info">
+                <h3 class="container__title">Jordan 1 Retro Low Golf</h3>
+                <p class="container__text">Travis Scott Neutral Olive</p>
+              </div>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="container">
-        <img alt="Jordan 1 Retro High OG SP" src="./images/2.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">Jordan 1 Retro High OG SP</h3>
-          <p class="container__text">Union LA Bephies Beauty Supply Summer of ‘96</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="Jadidas Campus 00s" src="./images/3.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">adidas Campus 00s</h3>
-          <p class="container__text">Core Black</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="Converse Chuck Taylor All Star 70 Hi" src="./images/4.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">Converse Chuck Taylor All Star 70 Hi</h3>
-          <p class="container__text">Comme des Garcons PLAY White</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="UGG Classic Ultra Mini Boot" src="./images/5.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">UGG Classic Ultra Mini Boot</h3>
-          <p class="container__text">Chestnut (Women's)</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="New Balance 574 YURT" src="./images/6.jpg" class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">New Balance 574 YURT</h3>
-          <p class="container__text">Salehe Bembury Shark Skinw</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="Jordan 1 Retro Low Golf"
-          src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/1.png"
-          class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">Jordan 1 Retro Low Golf</h3>
-          <p class="container__text">Travis Scott Neutral Olive</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="Nike Dunk Low SP"
-          src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/2.png"
-          class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">Nike Dunk Low SP</h3>
-          <p class="container__text">Syracuse</p>
-        </div>
-      </div>
-      <div class="container">
-        <img alt="adidas Yeezy Foam RNR"
-          src="https://sandbox-teens.practicum-team.ru/tasks/03-more-html-and-css-sprint/01-flex-sandboxes/07-training/sandbox-01/pre/images/3.png"
-          class="container__image" />
-        <div class="container_info">
-          <h3 class="container__title">adidas Yeezy Foam RNR</h3>
-          <p class="container__text">Desert Sand</p>
-        </div>
-      </div>
+
     </div>
-  </section>
+    </section>
+  </div>
 
   <footer>
     <div class="footcentr">
       <div class="foot1">
-        <a href="#">
+        <a href="index.html">
           <img alt="logo" src="images/footer.svg" id="svg">
         </a>
         <nav>
           <ol>
             <li>
-              <a class="outlink2" href="https://ya.ru">
+              <a class="outlink2" href="#">
                 💬 TG
               </a>
             </li>
             <li>
-              <a class="outlink2" href="https://ya.ru">
+              <a class="outlink2" href="#">
                 😊 VK
               </a>
             </li>
             <li>
-              <a class="outlink2" href="https://ya.ru">
+              <a class="outlink2" href="#">
                 📺 YouTube
               </a>
             </li>
