--- a/C-ms574.html
+++ b/C-ms574.html
@@ -37,84 +37,73 @@
     </div>
   </header>
 
-  <div class="back">
+  <main class="back">
 
-  </div>
+    <section class="ramka-cont">
+      <div class="otstup">
+        <div class="big__content">
+          <div class="info">
+            <div class="cut__img">
+              <img alt="Nike Air Max Plus" src="images/6.jpg" class="info__image" />
+              </a>
+            </div>
+            <div class="big__container__info">
+              <h2 id="big__h2">The New Balance C-ms574</h2>
+              <h3 id="big__p">Salehe Bembury Shark Skin</h3>
+              <div class="big__info">
+                <div class="big__text">
+                  <p class="abzac">Компания New Balance изначально занималась производством стель и ортопедической
+                    обуви
+                    в
+                    начале</p>
 
-  <section class="ramka-cont">
-    <div class="otstup">
-      <div class="big__content">
-        <div class="info">
-          <div class="cut__img">
-            <img alt="Nike Air Max Plus" src="images/6.jpg" class="info__image" />
-            </a>
-          </div>
-          <div class="big__container__info">
-            <h2 id="big__h2">The New Balance C-ms574</h2>
-            <p id="big__p">Salehe Bembury Shark Skin</p>
-            <div class="big__info">
-              <div class="big__text">
-                <p class="abzac">Компания New Balance изначально занималась производством стель и ортопедической обуви в
-                  начале</p>
+                  <p class="abzac">20-го века в Бостоне, США. Сегодня, New Balance — это мировой бренд, производящий
+                    спортивную одежду
+                    и обувь для активного отдыха и спорта. Кроссовки New Balance отличаются удобством, стабильностью,
+                    качеством и современным дизайном.</p>
 
-                <p class="abzac">20-го века в Бостоне, США. Сегодня, New Balance — это мировой бренд, производящий
-                  спортивную одежду
-                  и обувь для активного отдыха и спорта. Кроссовки New Balance отличаются удобством, стабильностью,
-                  качеством и современным дизайном.</p>
+                  <p class="abzac">Благодаря технологиям, таким как Encap и Abzorb, обувь этого бренда обеспечивает
+                    оптимальную
+                    амортизацию
+                    и поддержку стопы, делая её популярной среди спортсменов и любителей активного образа жизни. Кроме
+                    этого,
+                    New Balance заботится о внешнем виде своей продукции, предлагая разнообразие моделей и цветовых
+                    решений,
+                    от классических до ярких и стильных.</p>
 
-                <p class="abzac">Благодаря технологиям, таким как Encap и Abzorb, обувь этого бренда обеспечивает
-                  оптимальную
-                  амортизацию
-                  и поддержку стопы, делая её популярной среди спортсменов и любителей активного образа жизни. Кроме
-                  этого,
-                  New Balance заботится о внешнем виде своей продукции, предлагая разнообразие моделей и цветовых
-                  решений,
-                  от классических до ярких и стильных.</p>
-
-                <p class="abzac">Кроссовки New Balance предназначены для различных видов деятельности: бега, ходьбы,
-                  тренировок в зале
-                  и повседневной носки. Они сочетают в себе комфорт и функциональность, а также удовлетворяют
-                  потребности
-                  как профессиональных спортсменов, так и любителей спорта. Благодаря широкому ассортименту, каждый
-                  может
-                  выбрать подходящую для себя модель.</p>
-              </div>
-              <div class="big__parametres">
-                <div class="table__info">
-                  <div id="ocross">О кроссах</div>
+                  <p class="abzac">Кроссовки New Balance предназначены для различных видов деятельности: бега, ходьбы,
+                    тренировок в зале
+                    и повседневной носки. Они сочетают в себе комфорт и функциональность, а также удовлетворяют
+                    потребности
+                    как профессиональных спортсменов, так и любителей спорта. Благодаря широкому ассортименту, каждый
+                    может
+                    выбрать подходящую для себя модель.</p>
                 </div>
-                <div class="table__info">
-                  <div>
-                    Дата выхода
+                <div class="big__parametres">
+                  <div class="table__info">
+                    <div id="ocross">О кроссах</div>
                   </div>
-                  <div>
-                    02/12/2023
+                  <div class="table__info">
+                    <p>Дата выхода</p>
+                    <p>02/12/2023</p>
                   </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Розничная цена
+                  <div class="table__info">
+                    <p>Розничная цена</p>
+                    <p>250€</p>
                   </div>
-                  <div>
-                    250€
-                  </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Материалы
-                  </div>
-                  <div>
-                    Замша 100%, резина
+                  <div class="table__info">
+                    <p>Материалы</p>
+                    <p>Замша 100%, резина</p>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="footcentr">
