--- a/Dunk_Low_SP.html
+++ b/Dunk_Low_SP.html
@@ -37,76 +37,70 @@
     </div>
   </header>
 
-  <div class="back">
+  <main class="back">
 
-  </div>
+    <section class="ramka-cont">
+      <div class="otstup">
+        <div class="big__content">
+          <div class="info">
+            <div class="cut__img">
+              <img alt="Nike Dunk Low SP" src="images/8.jpg" class="info__image" />
+              </a>
+            </div>
+            <div class="big__container__info">
+              <h2 id="big__h2">Nike Dunk Low SP</h2>
+              <h3 id="big__p">Nike Dunk Low Orange Blaze Syracuse</h3>
+              <div class="big__info">
+                <div class="big__text">
+                  <p class="abzac">Nike — американская транснациональная компания, специализирующаяся на спортивной
+                    одежде
+                    и обуви. Штаб-квартира — в городе Бивертон (штат Орегон).</p>
 
-  <section class="ramka-cont">
-    <div class="otstup">
-      <div class="big__content">
-        <div class="info">
-          <div class="cut__img">
-            <img alt="Nike Dunk Low SP" src="images/8.jpg" class="info__image" />
-            </a>
-          </div>
-          <div class="big__container__info">
-            <h2 id="big__h2">Nike Dunk Low SP</h2>
-            <p id="big__p">Nike Dunk Low Orange Blaze Syracuse</p>
-            <div class="big__info">
-              <div class="big__text">
-                <p class="abzac">Nike — американская транснациональная компания, специализирующаяся на спортивной одежде
-                  и обуви. Штаб-квартира — в городе Бивертон (штат Орегон).</p>
+                  <p class="abzac">Почти вся продукция Nike производится сторонними компаниями-подрядчиками вне
+                    территории США (в основном в Азии), сама компания является правообладателем торговых марок,
+                    разрабатывает дизайн продукции и владеет сетью магазинов (около 1150 по всему миру), а также
+                    торговых центров
+                    NikeTown. С 20 сентября 2013 года входит в Промышленный индекс Доу Джонса. Nike является самым
+                    дорогим
+                    спортивным брендом в мире (по мнению Forbes).</p>
 
-                <p class="abzac">Почти вся продукция Nike производится сторонними компаниями-подрядчиками вне территории
-                  США (в основном в Азии), сама компания является правообладателем торговых марок, разрабатывает дизайн
-                  продукции и владеет сетью магазинов (около 1150 по всему миру), а также торговых центров NikeTown. С
-                  20 сентября 2013 года входит в Промышленный индекс Доу Джонса. Nike является самым дорогим спортивным
-                  брендом в мире (по мнению Forbes).</p>
-
-                <p class="abzac">Компания, основанная 25 января 1964 года под названием Blue Ribbon Sports, официально
-                  стала Nike, Inc. в 1978 году. Nike продаёт свою продукцию под собственным брендом, а также под марками
-                  Nike Golf, Nike Pro, Nike +, Air Jordan, Nike Blazers, Air Force 1, Nike Dunk, Air Max, Foamposite,
-                  Nike Skateboarding, Nike CR7, Hurley International, Converse. Nike является спонсором многих
-                  спортсменов и спортивных команд по всему миру. Начиная с 1990-х годов компания регулярно подвергается
-                  критике за то, что её продукция производится на фабриках, где нарушается трудовое законодательство.
-                </p>
-              </div>
-              <div class="big__parametres">
-                <div class="table__info">
-                  <div id="ocross">О кроссах</div>
+                  <p class="abzac">Компания, основанная 25 января 1964 года под названием Blue Ribbon Sports,
+                    официально
+                    стала Nike, Inc. в 1978 году. Nike продаёт свою продукцию под собственным брендом, а также под
+                    марками
+                    Nike Golf, Nike Pro, Nike +, Air Jordan, Nike Blazers, Air Force 1, Nike Dunk, Air Max,
+                    Foamposite,
+                    Nike Skateboarding, Nike CR7, Hurley International, Converse. Nike является спонсором многих
+                    спортсменов и спортивных команд по всему миру. Начиная с 1990-х годов компания регулярно
+                    подвергается
+                    критике за то, что её продукция производится на фабриках, где нарушается трудовое
+                    законодательство.
+                  </p>
                 </div>
-                <div class="table__info">
-                  <div>
-                    Дата выхода
+                <div class="big__parametres">
+                  <div class="table__info">
+                    <p id="ocross">О кроссах</p>
                   </div>
-                  <div>
-                    10/03/2020
+                  <div class="table__info">
+                    <p>Дата выхода</p>
+                    <p>10/03/2020</p>
                   </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Розничная цена
+                  <div class="table__info">
+                    <p>Розничная цена</p>
+                    <p>251€</p>
                   </div>
-                  <div>
-                    251€
-                  </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Материалы
-                  </div>
-                  <div>
-                    Кожа 100%, резина
+                  <div class="table__info">
+                    <p>Материалы</p>
+                    <p>Кожа 100%, резина</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="footcentr">
