--- a/Chuck_70.html
+++ b/Chuck_70.html
@@ -37,76 +37,68 @@
     </div>
   </header>
 
-  <div class="back">
+  <main class="back">
 
-  </div>
+    <section class="ramka-cont">
+      <div class="otstup">
+        <div class="big__content">
+          <div class="info">
+            <div class="cut__img">
+              <img alt="Nike Air Max Plus" src="images/9.jpg" class="info__image" />
+              </a>
+            </div>
+            <div class="big__container__info">
+              <h2 id="big__h2">The New Balance C-ms574</h2>
+              <h3 id="big__p">Salehe Bembury Shark Skin</h3>
+              <div class="big__info">
+                <div class="big__text">
+                  <p class="abzac">История компании Converse началась в 1908 году, когда Маркус Миллс Конверс основал
+                    в
+                    Малдене, Массачусетс, обувную фабрику. Изначально компания специализировалась на выпуске рабочей
+                    обуви, особенно для шахтеров и строителей. В 1917 году компания была переименована в “Converse
+                    Rubber
+                    Shoe Company”, поскольку основной акцент был сделан на производство обуви из резины.</p>
 
-  <section class="ramka-cont">
-    <div class="otstup">
-      <div class="big__content">
-        <div class="info">
-          <div class="cut__img">
-            <img alt="Nike Air Max Plus" src="images/9.jpg" class="info__image" />
-            </a>
-          </div>
-          <div class="big__container__info">
-            <h2 id="big__h2">The New Balance C-ms574</h2>
-            <p id="big__p">Salehe Bembury Shark Skin</p>
-            <div class="big__info">
-              <div class="big__text">
-                <p class="abzac">История компании Converse началась в 1908 году, когда Маркус Миллс Конверс основал в
-                  Малдене, Массачусетс, обувную фабрику. Изначально компания специализировалась на выпуске рабочей
-                  обуви, особенно для шахтеров и строителей. В 1917 году компания была переименована в “Converse Rubber
-                  Shoe Company”, поскольку основной акцент был сделан на производство обуви из резины.</p>
+                  <p class="abzac">В 1921 году Converse представила свою первую баскетбольную обувь, которая быстро
+                    стала
+                    популярной среди игроков. Это привело к тому, что в 1936 году компания решила сосредоточиться на
+                    производстве спортивной обуви. В последующие годы бренд стал ассоциироваться с баскетболом и стал
+                    одним из самых узнаваемых в мире спорта.</p>
 
-                <p class="abzac">В 1921 году Converse представила свою первую баскетбольную обувь, которая быстро стала
-                  популярной среди игроков. Это привело к тому, что в 1936 году компания решила сосредоточиться на
-                  производстве спортивной обуви. В последующие годы бренд стал ассоциироваться с баскетболом и стал
-                  одним из самых узнаваемых в мире спорта.</p>
+                  <p class="abzac">В 1986 году Converse объединилась с компанией Nike, чтобы расширить свой рынок и
+                    улучшить свои продукты. С тех пор, бренд Converse стал еще более известным благодаря
+                    сотрудничеству
+                    с
+                    различными знаменитостями, спортсменами и модными дизайнерами. Сегодня Converse продолжает
+                    выпускать
+                    разнообразную спортивную обувь и одежду, а также является одним из ключевых игроков на рынке
+                    молодежной моды.</p>
 
-                <p class="abzac">В 1986 году Converse объединилась с компанией Nike, чтобы расширить свой рынок и
-                  улучшить свои продукты. С тех пор, бренд Converse стал еще более известным благодаря сотрудничеству с
-                  различными знаменитостями, спортсменами и модными дизайнерами. Сегодня Converse продолжает выпускать
-                  разнообразную спортивную обувь и одежду, а также является одним из ключевых игроков на рынке
-                  молодежной моды.</p>
-
-              </div>
-              <div class="big__parametres">
-                <div class="table__info">
-                  <div id="ocross">О кроссах</div>
                 </div>
-                <div class="table__info">
-                  <div>
-                    Дата выхода
+                <div class="big__parametres">
+                  <div class="table__info">
+                    <p id="ocross">О кроссах</p>
                   </div>
-                  <div>
-                    11/06/2022
+                  <div class="table__info">
+                    <p>Дата выхода</p>
+                    <p>11/06/2022</p>
                   </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Розничная цена
+                  <div class="table__info">
+                    <p>Розничная цена</p>
+                    <p>145€</p>
                   </div>
-                  <div>
-                    145€
-                  </div>
-                </div>
-                <div class="table__info">
-                  <div>
-                    Материалы
-                  </div>
-                  <div>
-                    Текстиль 100%, резина
+                  <div class="table__info">
+                    <p>Материалы</p>
+                    <p>Текстиль 100%, резина</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="footcentr">
